--- a/src/alpine.html
+++ b/src/alpine.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/xterm@4.9.0/css/xterm.css"
-    />
-    <title>boot alpine</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script
-      crossorigin="anonymous"
-      src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.js"
-    ></script>
-    <script type="module" src="./index.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.9.0/css/xterm.css" />
+  <title>boot alpine</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.js"></script>
+  <script src="./lib/log.js"></script>
+  <script src="./lib/utf8.js"></script>
+  <script src="./lib/const.js"></script>
+  <script src="./lib/lib.js"></script>
+  <script src="./lib/9p.js"></script>
+  <script src="./lib/filesystem.js"></script>
+  <script src="./lib/filestorage.js"></script>
+  <script src="./lib/virtio.js"></script>
+  <script type="module" src="./index.tsx"></script>
+</body>
+
 </html>
