--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.9.0/css/xterm.css" />
+    <link rel="stylesheet" href="https://gw.alipayobjects.com/os/lib/xterm/4.19.0/css/xterm.css" />
     <title>boot debian</title>
   </head>
 
   <body>
     <div id="app"></div>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.js"></script>
+    <script crossorigin="anonymous" src="https://gw.alipayobjects.com/os/lib/xterm/4.19.0/lib/xterm.js"></script>
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
