--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
       src="https://gw.alipayobjects.com/os/lib/react-dom/18.2.0/umd/react-dom.production.min.js"
     ></script>
+    <script crossorigin="anonymous" src="https://unpkg.com/filer@1.4.1/dist/filer.js"></script>
   </head>
 
   <body>
